<resources>
    <string name="app_name">MessagePortal</string>
    <string name="action_settings">Settings</string>
    <string name="action_session_info">Session info</string>
    <string name="action_info">Info</string>
    <string name="action_uri_param">URI Details</string>
    <string name="auth_key">Auth key:</string>
    <string name="no_sms">No SMS sent yet.</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="sms_limit">SMS Limit</string>
    <string name="unlimited">Unlimited</string>
    <string name="device_port">Device port</string>
    <string name="invoice_day">Invoice day</string>
    <string name="gateway">Gateway</string>
    <string name="credits_limit">SMS Limit</string>
    <string name="remaining_credits">Remaining SMS:</string>
    <string name="app_version">App version:</string>
    <string name="ip">Device IP:</string>
    <string name="sim1">SIM 1</string>
    <string name="sim2">SIM 2</string>
    <string name="ringtone">Ringtone</string>
    <string name="send_uri">URI: "/send"</string>
    <string name="optional_id">"id" param is optional.</string>
    <string name="credits_uri">URI: "/credit"</string>
    <string name="auth_uri">URI: "/authKey"</string>
    <string name="select_list_type">Select the SMS shown.</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="details">SMS Details</string>
    <string name="sms_list">SMS List</string>
    <string name="server_status">Server</string>
    <string name="phone_no_format">PhoneNo format:</string>
</resources>