<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:backgroundTint="#ffffff"
    android:descendantFocusability="beforeDescendants"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    tools:context="com.messageportal.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="0sp"
        tools:layout_editor_absoluteY="0sp" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeLayout"
        android:layout_width="390sp"
        android:layout_height="570sp"
        android:layout_marginLeft="8sp"
        android:layout_marginTop="112sp"
        android:layout_marginEnd="8sp"
        android:windowSoftInputMode="stateUnchanged"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sms_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8sp"
            android:layout_marginLeft="0sp"
            android:layout_marginTop="130sp"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="8sp"
            android:elevation="5sp"
            android:scrollbars="vertical"
            android:windowSoftInputMode="stateUnchanged"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="6sp" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/noSMSTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="388sp"
        android:layout_marginEnd="152sp"
        android:text="@string/no_sms"
        android:textColor="@color/dialog_primary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <ProgressBar
        android:id="@+id/loaderId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320sp"
        android:layout_marginEnd="164sp"
        android:layout_weight="1"
        android:minWidth="40sp"
        android:minHeight="40sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="388sp"
        android:layout_height="41sp"
        android:layout_marginTop="52sp"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/server_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:layout_marginEnd="4sp"
            android:text="@string/server_status"
            android:textColor="@color/dialog_primary"
            android:textColorLink="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/selectListSpinner"
            android:layout_width="wrap_content"
            android:layout_height="24sp"
            android:layout_marginTop="12sp"
            android:layout_marginEnd="236sp"
            android:backgroundTint="@color/dialog_primary"
            android:focusable="auto"
            android:spinnerMode="dropdown"
            android:tooltipText="@string/select_list_type"
            android:windowSoftInputMode="stateUnchanged"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
